[package]
name = "gas_saver_eth"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.5.2", features = ["serde"] }
alloy-rpc-types-eth = "1.2.1"
anyhow = "1.0.100"
borsh = { version = "1.6.0", features = ["derive"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
futures = "0.3.31"
lru = "0.16.2"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
